--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,17 +5,19 @@
 <body>
 <h1>Please Log In</h1>
 <div th:if="${param.error}">
-    Invalid username and password.</div>
+    Invalid username and password.
+</div>
 <div th:if="${param.logout}">
-    You have been logged out.</div>
-<form th:action="@{/login}" method="post">
+    You have been logged out.
+</div>
+<form method="post" th:action="@{/api/login}">
     <div>
-        <input type="text" name="username" placeholder="Username"/>
+        <input name="username" placeholder="Username" type="text"/>
     </div>
     <div>
-        <input type="password" name="password" placeholder="Password"/>
+        <input name="password" placeholder="Password" type="password"/>
     </div>
-    <input type="submit" value="Log in" />
+    <input type="submit" value="Log in"/>
 </form>
 </body>
 </html>
