--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -38,14 +38,15 @@
     <div id="overlay-user" onclick="hideOverlay()"></div>
     <div class="login-window" id="popup-login-window">
         <h1 class="login-heading">Log in</h1>
-        <div class="login-form email">
-            <input name="query" placeholder="Enter email" type="search">
-        </div>
-        <div class="login-form password">
-            <input name="query" placeholder="Enter password" type="search">
-        </div>
-
-        <button id="confirm-button">Confirm</button>
+        <form th:action="@{/login}" method="post">
+            <div class="login-form email">
+                <input name="username" placeholder="Enter email" type="text" required>
+            </div>
+            <div class="login-form password">
+                <input name="password" placeholder="Enter password" type="password" required>
+            </div>
+            <button id="confirm-button">Confirm</button>
+        </form>
     </div>
 
     <img th:src="@{images/home.svg}" src="../../images/home.svg" alt = "home" class = "home">
